# lambdas-with-compiler-magic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lambda-experiment/: CMakeLists.txt
lambda-experiment/src/lambda-w-compiler-magic/: magic-w-lambdas.cpp  magic-w-lambdas.hpp
lambda-experiment/src/std-func-impl/: function-impl.cpp
